# spotify-tauri

./: .gitignore  flake.nix  package.json  pnpm-lock.yaml
src/: commands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: spotify.json
src-tauri/src/: main.rs
