[package]
name = "spotify-tauri"
version = "0.2.0"
description = "Unofficial Lightweight Spotify Client"
authors = ["Hayden Chang <m831718@gmail.com>"]
repository = "https://github.com/CRT-HAO/spotify-tauri"
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.0.1"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
